--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-	"name"       : "x-team/wp-settings-revisions",
+	"name"       : "xwp/wp-settings-revisions",
 	"description": "Keep revisions of changes to your settings in Theme Customizer, and preview rollbacks to their previous states.",
 	"homepage"   : "http://wordpress.org/plugins/settings-revisions/",
 	"type"       : "wordpress-plugin",
 	"license"    : "GPL-2.0+",
 	"authors"    : [
 		{
-			"name"    : "x-team",
-			"homepage": "http://x-team.com/"
+			"name"    : "xwp",
+			"homepage": "https://xwp.co/"
 		}
 	],
 	"require": {
